--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ langchain-openai==0.1.3
 langchain-core==0.1.46
 langchain-google-genai==1.0.3
 langchain-anthropic==0.1.11
+
+requests==2.31.0
+beautifulsoup4==4.12.3
+langchain_text_splitters==0.0.1
+
+youtube-transcript-api==0.6.2
+pytube==15.0.0
